test/libsolidity/syntaxTests/functionTypes/external_function_type_returning_internal.sol
contract C {
    function() external returns (function () internal) x;
}
// ----
// TypeError: (46-67): Internal type cannot be used for external function type.
